# team_project_on_Fast_API

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
Front/: all_images.html  all_users.html  get_qr.html  images.html  images_by_tag.html  index.html  user.html
Front/css/: stile.css
Front/javasript/: all_images.js  all_users.js  get_qr.js  images.js  images_by_tag.js  images_by_username.js  login.js  user.js
docs/source/: conf.py  index.rst
documents/: Planning REST api.xlsx  git_comands_terminal.txt  ~$ Проекту Веб Python_ Instagram – копія.docx  ~$силання.docx  Матеріали до командного проєкту Python Web .pptx  Посилання.docx  ТЗ Проекту Веб Python_ Instagram – копія.docx
migrations/: env.py
migrations/versions/: 0873ac4943ca_28_07.py  10d2abc55074_init.py  13e3743b9738_init.py  144fbaec4018_init.py  153762aa6122_init.py  2a608153ad70_init.py  34134e030c27_init.py  4d9e7976da4c_init.py  513ecc3dab80_init.py  590a6eb95b6d_init.py  59694352b1a6_init.py  832c37b3d392_add_role.py  8f6bccb1ef10_user_information.py  9df648d2a241_new_images.py  add997a55ecf_1.py  b196585885b0_add_logout.py  cb3ba2e5eab3_init.py  dc1144ff13f9_init.py  f002ca8ee05b_init.py
scr/database/: models.py
src/: LICENSE  main.py  schemas.py  token.py
src/database/: db.py  db_connection.py  models.py
src/repository/: comments.py  images.py  tags.py  users.py
src/routes/: comments.py  images.py  tags.py  users.py
src/services/: db_cleaner.py  images.py  roles.py  users.py
test_features/: pprint11.py  qrcode.py  qrcode_test.py
tests/: conftest.py  test_repository_comments.py  test_repository_images.py  test_repository_tags.py  test_unit_repository_users.py
(+9 files in other folders)
