[tool.poetry]

name = "team-project-on-fast-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "team_project_on_fast_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
alembic = "^1.11.1"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"
qrcode = "^7.4.2"
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
schedule = "^1.2.0"
cloudinary = "^1.33.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
pillow = "^10.0.0"



[tool.poetry.group.dev.dependencies]
qrcode = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
